Retrieval Pinning branding

--- a/website/public/index.html
+++ b/website/public/index.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta
       name="description"
-      content=" “Onchain.Storage” is an ecosystem of on-chain storage products."
+      content="Retrieval Pinning is part of an interoperable ecosystem of on-chain storage products."
     />
     <meta name="robots" content="all" />
     <meta name="revisit-after" content="7" />
     <meta name="language" content="en-US" />
     <meta name="charset" content="iso-8859-1" />
-    <meta name="author" content="Onchain.Storage" />
+    <meta name="author" content="Retrieval Pinning" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://pldr.dev" />
     <meta
       property="og:title"
-      content="Onchain.Storage
+      content="Retrieval Pinning
   "
     />
     <meta
       property="og:description"
-      content=" “Onchain.Storage” is an ecosystem of on-chain storage products."
+      content="Retrieval Pinning is part of an interoperable ecosystem of on-chain storage products."
     />
     <meta property="og:image" content="/cover.jpg" />
     <meta property="og:image:width" content="1200" />
@@ -30,23 +30,22 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Onchain.Storage
+      content="Retrieval Pinning
   "
     />
     <meta
       name="twitter:description"
-      content=" “Onchain.Storage” is an ecosystem of on-chain storage products."
+      content="Retrieval Pinning is part of an interoperable ecosystem of on-chain storage products."
     />
     <meta name="twitter:image" content="/cover.jpg" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>Onchain.Storage</title>
+    <title>Retrieval Pinning</title>
   </head>
   <body>
     <noscript>
       <strong
-        >Onchain.Storage leverages on a reliable system of “missed retrieval”
-        penalties that increases the confidence in decentralized storage
-        networks.</strong
+        >Retrieval Pinning is part of an interoperable ecosystem of on-chain
+        storage products.</strong
       >
     </noscript>
     <div id="app"></div>
