--- a/protocols/web3storage-bounty/ui/public/index.html
+++ b/protocols/web3storage-bounty/ui/public/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link name="favicon" href="./favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-  <title>NFT.Storage Bridge</title>
+  <title>Onchain.storage x Web3.storage</title>
 </head>
 
 <body>
