--- a/protocols/web3storage-bounty/ui/public/index.html
+++ b/protocols/web3storage-bounty/ui/public/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-  <title>Web3.storage</title>
+  <title>Web3 Bounty | web3.storage dealer</title>
 </head>
 
 <body>
