switch blockchain functions

--- a/protocols/web3storage-bounty/ui/public/index.html
+++ b/protocols/web3storage-bounty/ui/public/index.html
@@ -19,6 +19,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css"
+    />
   </head>
 
   <body>
